# modelmeter

./: .gitignore  .gitlab-ci.yml  .impeccable.md  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.gitlab/merge_request_templates/: default.md
.opencode/commands/: cleanup-local-branches.md  commit_and_push.md  create_pr.md  create_release.md
docs/: performance-baseline.md  release-runbook.md
plans/: 00-roadmap-index.md  01-core-platform.md  03-analytics-engine.md  05-live-monitoring.md  07-web-app-plan.md  08-packaging-quality-observability.md  09-future-extensions.md  10-server-parity-contract-live-streaming.md  11-frontend-product-polish-and-reliability.md  12-release-ops-and-collaboration-hardening.md  13-performance-and-scalability.md  14-release-artifact-packaging-and-installer.md  15-calver-and-git-hash-versioning.md  README.md
plans/completed/phase-1-3/: 02-opencode-data-layer.md  04-cli-product.md  06-api-foundation-for-web.md  10-server-parity-contract-live-streaming.md  11-frontend-product-polish-and-reliability.md  13-performance-and-scalability.md  (+3 more)
plans/phase-4-distributed-and-lifecycle/: 18-auto-update-and-release-awareness.md  20-21-quick-reference.md  21-provider-detection-from-providerid-field.md  README.md  TRACKING.md
plans/phase-4-remaining/: README.md
plans/phase-5/: 22-per-page-filters-and-date-insights.md  24-live-multi-session-and-scope-simplification.md  25-sources-page-card-redesign.md  26-date-insights-session-cards.md  README.md
plans/phase-6/: 27-repository-protocol-and-factory.md  28-claudecode-jsonl-reader.md  29-auto-detection-and-agent-identity.md  30-analytics-multi-repo-integration.md  31-live-monitoring-claudecode.md  32-frontend-agent-identity.md  README.md
scripts/: check_contract_version_policy.py  export_openapi.py  install.sh  perf_baseline.py  prepare_web_dist.py  stamp_calver.py  sync_product_version.py  write_openapi_hash.py
src/modelmeter/: __init__.py
tests/: test_analytics.py  test_api.py  test_cli.py  test_doctor.py  test_federation.py  test_jsonl_reader.py  test_live.py  test_multi_agent_federation.py  test_openapi_contract.py  test_provider_settings_api.py  test_provider_usage.py  test_providers.py  test_repository_protocol.py  test_schema.py  test_settings.py  test_sources.py  test_updater.py  test_user_settings.py  test_versioning.py  test_web_proxy_config.py
web/: .npmrc  index.html  openapi.json  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  types.ts
(+119 files in other folders)
