[project]
name = "modelmeter"
version = "2026.3.28"
description = "Usage analytics for AI coding agents — terminal and web"
readme = "README.md"
authors = [
    { name = "Nikho Sagala", email = "work@ntbs.dev" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
    "typer>=0.16.1",
    "uvicorn>=0.35.0",
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

[project.scripts]
modelmeter = "modelmeter.cli.main:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pip-audit>=2.9.0",
    "pre-commit>=4.3.0",
    "ty>=0.0.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.13.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.ty]
environment.python-version = "3.13"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
